# CV2

./: .gitignore  docker-compose.yaml
hello-service/: README.md  dockerfile  pyproject.toml
hello-service/hello_service/: main.py
initdb/: create_tables.sql
parser-service/: README.md  dockerfile  pyproject.toml  requirements.txt
parser-service/Data/: categorylinks.txt
parser-service/parser_service/: Scraper.py  controller.py  db.py  db_links_init.py
pgdata/: postmaster.pid
pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
pgdata/base/5/: 1247  1249  1259  16384  16385  16390  16391  16393  16399  16400  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2841  3455  5002  (+1 more)
pgdata/global/: 1260  pg_control  pg_internal.init
pgdata/pg_xact/: 0000
svc-hello/: pyproject.toml
