[tool.poetry]
name = "hello-service"
version = "0.1.0"
description = ""
authors = ["Maximus <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
app = "hello_service.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
