[tool.poetry]
name = "svc-hello"
version = "0.1.0"
description = ""
authors = ["Ivan Korolev <sociopart@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
app = "svc_hello.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
